[gd_scene load_steps=7 format=2]

[ext_resource path="res://SceneSwitcher.gd" type="Script" id=2]
[ext_resource path="res://GamePlay.tscn" type="PackedScene" id=3]
[ext_resource path="res://CanvasLayer.gd" type="Script" id=6]

[sub_resource type="Animation" id=1]
length = 0.001

[sub_resource type="Animation" id=2]
resource_name = "fade-to-normal"
tracks/0/type = "value"
tracks/0/path = NodePath("TransitionScreen/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "fade_to_black"
tracks/0/type = "value"
tracks/0/path = NodePath("TransitionScreen/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[node name="SceneSwitcher" type="Node2D"]
script = ExtResource( 2 )

[node name="CurrentScene" type="Node2D" parent="."]

[node name="Single Player" parent="CurrentScene" instance=ExtResource( 3 )]

[node name="Timer" type="Timer" parent="CurrentScene/Single Player"]

[node name="TransitionScreen" type="CanvasLayer" parent="."]
layer = 10
script = ExtResource( 6 )

[node name="ColorRect" type="ColorRect" parent="TransitionScreen"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -348.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="TransitionScreen"]
root_node = NodePath("../..")
anims/RESET = SubResource( 1 )
anims/fade-to-normal = SubResource( 2 )
anims/fade_to_black = SubResource( 3 )

[connection signal="timeout" from="CurrentScene/Single Player/Timer" to="." method="_on_Timer_timeout"]
[connection signal="transitioned" from="TransitionScreen" to="." method="_on_TransitionScreen_transitioned"]
[connection signal="animation_finished" from="TransitionScreen/AnimationPlayer" to="TransitionScreen" method="_on_AnimationPlayer_animation_finished"]
